tests/analyze/record-update-errors/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Field `nickname` does not exist in record of type `{age: int, name: string}`.
> 8 | 	let bad-new-field = {...a, nickname: "R"}
                               ^

error: Type mismatch: expected `int`, but found `string`.
> 11 | 	let bad-type-change = {...a, age: "thirty"}
                                  ^
